# sky_sheet_player

./: Cargo.toml  LICENSE  Nandemonaiya.txt  README.md
sheet_samples/: Beauty And The Beast.txt  Fallen Down.txt  Merry Go Round of Life.txt  Mitsuha's Theme.txt  River Flows in You.txt  Senbonzakura.txt
src/: hotkey_config.rs  hotkey_utils.rs  main.rs
